# GeometricRegistration

./: .gitignore  CMakeLists.txt  README.md
Apps/GeoAlign/: CMakeLists.txt
Apps/GeoAlign/src/: main.cpp
Apps/Project/: CMakeLists.txt
Apps/Project/src/: main.cpp
Apps/Project/src/Core/: ICPSystem.cpp  ICPSystem.h  ICPTestCase.cpp  ICPTestCase.h  ICPTestRun.cpp  ICPTestRun.h
Apps/Project/src/Graphics/: BufferObjects.cpp  FrameBuffer.cpp  LeoGraphics.cpp  LeoGraphics.h  Mesh.cpp  Mesh.h  RaylibRenderer.cpp  RaylibRenderer.h  Shader.h
Apps/Project/src/Platform/: LeoWindow.cpp
Apps/Testing/: CMakeLists.txt
Apps/Testing/src/: ExpectNear.h  IOUtilsTests.h  SDFTests.h  main.cpp  test_kdtree.h  test_naiveicp.h  test_pointcloud.h  test_transform.h
Apps/Testing/src/TestSuite/: Model.cpp  Model.h  TestCase.cpp  TestCase.h  TestSuitePSA.cpp  TestSuitePSA.h
Apps/Testing/src/UnitTests/: FacetExtractionTests.h  IOUtilsTests.h  RandomPointCloud.cpp  RandomPointCloud.h  SDFTests.h  UnitTests.h
Apps/ViewerApp/: CMakeLists.txt
Apps/ViewerApp/src/: main.cpp
Apps/ViewerApp/src/Camera/: ViewerCamera.cpp  ViewerCamera.h  ViewerController.cpp  ViewerController.h
Apps/ViewerApp/src/Core/: ViewerApp.cpp  ViewerApp.h
Apps/ViewerApp/src/Drawable/: MeshDrawable.cpp  MeshDrawable.h  PointCloudDrawable.cpp  PointCloudDrawable.h
Apps/ViewerApp/src/Graphics/: BufferObjects.h  FrameBuffer.cpp  FrameBuffer.h  LeoGraphics.cpp  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Apps/ViewerApp/src/Platform/: GLWindow.cpp  GLWindow.h  Keys.h  LeoWindow.h  ViewerController.cpp  ViewerController.h
Apps/ViewerApp/src/Render/: MeshDrawable.h  PointCloudDrawable.cpp  PointCloudDrawable.h
GeometricRegistration/: CMakeLists.txt
GeometricRegistration/geo/: GeometricRegistration.cpp  GeometricRegistration.h  INearestNeighbor.h  KDTree.cpp  KDTree.h  PointCloud3D.cpp  PointCloud3D.h  RigidTransform.h  pch.h
GeometricRegistration/geo/Time/: GeoTime.cpp  GeoTime.h
GeometricRegistration/geo/core/: GeoTypes.h  pch.h
GeometricRegistration/geo/geometry/: Mesh.cpp  Mesh.h  PointCloud3D.cpp  PointCloud3D.h  RandomPointCloud.h
GeometricRegistration/geo/io/: IOGeometry.cpp  IOGeometry.h  IOUtils.cpp  IOUtils.h  IOUtils.h.cpp
GeometricRegistration/geo/logging/: Entry.h  EntryBuilder.cpp  EntryBuilder.h  Log.cpp  Log.h  LogLevel.h  LogMacros.h
GeometricRegistration/geo/math/: BBox.cpp  BBox.h  ESA.cpp  ESA.h  LinearSolve.cpp  LinearSolve.h  RigidTransform.h  SVD.cpp  SVD.h  Stats.cpp  Stats.h  Triangle.cpp  Triangle.h  solvers.cpp  solvers.h
GeometricRegistration/geo/reassembly/: FacetExtraction.cpp
GeometricRegistration/geo/registration/: ESA.cpp  ESA.h  EfficientICP.cpp  EfficientICP.h  ICPResult.h  LeastSquaresICP.cpp  LeastSquaresICP.h  NaiveICP.cpp  NaiveICP.h  SparseICP.cpp  SparseICP.h
GeometricRegistration/geo/spatial/: DistanceField.cpp  DistanceField.h  INearestNeighbor.h  KDTree.cpp  KDTree.h  LinearNN.cpp  LinearNN.h
GeometricRegistration/geo/utils/: GeoRand.cpp  GeoRand.h  GeoTime.cpp  GeoTime.h  GeoTypes.h  LeoRand.cpp  LeoRand.h  Rand.cpp  RandomPointCloud.cpp  RandomPointCloud.h
GeometricRegistration/geo/utils/logging/: EntryBuilder.h  Log.cpp  Log.h  LogLevel.cpp  LogLevel.h  LogMacros.h
Libraries/Core/: CMakeLists.txt
Libraries/Core/core/: Types.h
Libraries/Core/core/io/: IOGeometry.cpp  IOGeometry.h  IOImage.cpp  IOImage.h  IOUtils.cpp  IOUtils.h
Libraries/Core/core/logging/: Log.cpp  Log.h  LogLevel.h
Libraries/Core/core/math/: BBox.cpp  BBox.h  RigidTransform.h  Triangle.cpp  Triangle.h
Libraries/Core/core/utils/: Rand.cpp  Rand.h  Time.cpp  Time.h
Libraries/GL/: CMakeLists.txt
Libraries/GL/gl/Drawable/: MeshDrawable.h  PointCloudDrawable.h
Libraries/GL/gl/Graphics/: BufferObjects.cpp  BufferObjects.h  FrameBuffer.cpp  FrameBuffer.h  LeoGraphics.cpp  LeoGraphics.h  Shader.cpp  Texture.cpp
Libraries/GL/gl/Platform/: GLWindow.h
Libraries/Geo/: CMakeLists.txt
Libraries/Geo/geo/: GeometricRegistration.h  pch.h
Libraries/Geo/geo/geometry/: Mesh.cpp  Mesh.h  PointCloud3D.cpp  PointCloud3D.h
Libraries/Geo/geo/io/: IOGeometry.h  IOUtils.cpp  IOUtils.h
Libraries/Geo/geo/logging/: LogLevel.h  LogMacros.h
Libraries/Geo/geo/math/: BBox.cpp  RigidTransform.h  Triangle.h  solvers.cpp  solvers.h
Libraries/Geo/geo/reassembly/: FacetExtraction.cpp  FacetExtraction.h
Libraries/Geo/geo/registration/: ESA.cpp  ESA.h  EfficientICP.cpp  EfficientICP.h  (+4 more)
Project/: CMakeLists.txt
Project/src/: main.cpp
Project/src/Core/: ICPSystem.cpp  ICPSystem.h  LeoRand.cpp  LeoRand.h
Project/src/Graphics/: RaylibRenderer.cpp  RaylibRenderer.h
Testing/: CMakeLists.txt
Testing/src/: main.cpp  test_horn.h  test_kdtree.h  test_mesh.h  test_naiveicp.h  test_pointcloud.h
resources/shaders/: lighting.vs
resources/shaders/viewer/: MeshPhong.frag  MeshPhong.vert  PointShader.frag  PointShader.vert
(+11 files in other folders)
